--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ a {
 }
 
 section#home {
-	background-image: url("../images/0.JPG");
+	background-image: url("../images/0.jpg");
 	background-size: 60%;
 	/*background-color: red;*/
 }
