--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ a {
 
 section#home {
 	background-image: url("../images/0.jpg");
+	background-repeat: no-repeat;
 	background-size: cover;
 	color: white;
 	/*background-color: red;*/
