--- a/css/style.css
+++ b/css/style.css
@@ -19,11 +19,12 @@ a {
 	
 }
 
-section#home {
+/*section#home {
 	background-image: url("../images/0.JPG");
 	background-size: 65%;
-	/*background-color: red;*/
+	background-color: red;
 }
+*/
 
 
 
