--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ h5 {
 }
 
 #home {
-	background: url("images/0.jpg") no-repeat center bottom;
+	background: url("../images/0.jpg") no-repeat center bottom;
 	background-size: cover;
 }
 
